# raylib-py

./: .gitignore  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
examples/: audio_music_stream.py  core_2d_camera_mouse_zoom.py  core_2d_camera_split_screen.py  core_3d_camera_free.py  core_3d_camera_mode.py  core_basic_window.py  core_input_keys.py  core_input_mouse.py  core_input_mouse_wheel.py  core_scissor_test.py  core_smooth_pixelperfect.py  core_window_should_close.py  core_world_screen.py  models_animation.py  models_billboard.py  models_box_collisions.py  models_cubicmap.py  models_geometric_shapes.py  models_heightmap.py  models_loading.py  models_loading_gltf.py  models_orthographic_projection.py  raymath_vector_angle.py  shaders_custom_uniform.py  shaders_eratosthenes.py  shaders_model_shader.py  shaders_multi_sample2d.py  shaders_raymarching.py  shaders_shapes_textures.py  shaders_simple_mask.py  shaders_texture_drawing.py  shaders_texture_outline.py  shaders_texture_tiling.py  shaders_texture_waves.py
examples/audio/: audio_module_playing.py  audio_multichannel_sound.py  audio_music_stream.py  audio_raw_stream.py  audio_sound_loading.py
examples/core/: core_2d_camera.py  (+22 more)
logo/: deleteme.txt
raylibpy/: __init__.py  __init__old.py  _headers.py  _types.py  audio.py  camera.py  colors.py  constants.py  consts.py  core.py  easings.py  gestures.py  library.py  libraylib.2.0.0.dylib  libraylib.so.2.0.0  math.py  models.py  pythonic.py  rlgl.py  shapes.py  spartan.py  structures.py  text.py  textures.py  wrapper.py
(+40 files in other folders)
